--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,6 @@
+.border {
+  margin-left: 20%;
+}
 .left {
   float: left;
   width: 200px;
@@ -25,4 +28,15 @@
   left: 55px;
 /*  text-align: center;
   vertical-align: middle;*/
+}
+
+#overlay{
+  position: absolute;
+  top: 280;
+  width: 1000px;
+  height: 100px;
+  font-size: 50pt;
+  text-align: center;
+  background: gray;
+  opacity:0.6;
 }
